--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>青輝石 天井計算ツール</title>
+  <title>天井計算スル子ちゃん</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
