天井計算スル子ちゃんに改名

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="https://x.com/yucky_games" target="_blank">made by ゆっきー</a>
     </div>
 
-    <h1>青輝石 天井計算ツール</h1>
+    <h1>天井計算スル子ちゃん</h1>
 
     <div class="field">
       <label>① 今所持している青輝石は？</label>
