天井計算スルヨちゃんに改名

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>天井計算スル子ちゃん</title>
+  <title>天井計算スルヨちゃん</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -83,7 +83,7 @@
       <a href="https://x.com/yucky_games" target="_blank">made by ゆっきー</a>
     </div>
 
-    <h1>天井計算スル子ちゃん</h1>
+    <h1>天井計算スルヨちゃん</h1>
 
     <div class="field">
       <label>① 今所持している青輝石は？</label>
